<resources>
    <string name="app_name">SkemaPlan</string>
    <string name="undervisere">Undervisere</string>
    <string name="klasser">Klasser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mandag">Mandag</string>
    <string name="tirsdag">Tirsdag</string>
    <string name="onsdag">Onsdag</string>
    <string name="torsdag">Torsdag</string>
    <string name="fredag">Fredag</string>
    <string name="navn">Navn:</string>
    <string name="semester">Semester:</string>
    <string name="oversigt">Oversigt</string>
    <string name="fag">Fag:</string>
    <string name="skemalagte">Skemalagte</string>
    <string name="nom_blokke">Nom. blokke</string>
    <string name="navn_2">Navn</string>
    <string name="hjem">Hjem</string>
    <string name="oversigt2">Oversigt</string>
    <string name="klasseInfo">Klasse Info</string>
    <string name="underviser">Underviser</string>
    <string name="tilføjklasse">Tilføj Klasse</string>
    <string name="tilføjFag">Tilføj fag</string>
    <string name="fortryd">Fortryd</string>
    <string name="tilføj">Tilføj</string>
    <string name="vaelg_handling">Vælg handling</string>


    <string-array name="semestre">
        <item>1. semester</item>
        <item>2. semester</item>
        <item>3. semester</item>
        <item>4. semester</item>

    </string-array>

    <string-array name="fagNavne">
        <item>PRO1</item>
        <item>SU1</item>
        <item>FIT1</item>
        <item>PRO2</item>
        <item>SU2</item>
        <item>FIT2</item>
        <item>DAOS</item>
        <item>SUM</item>
        <item>DIP</item>
        <item>DIS</item>
        <item>Android</item>
        <item>C#og.Net</item>
        <item>Spilud.</item>

    </string-array>

    <string-array name="blokOptions">
        <item>Slet Blok</item>
        <item>Markér Fri</item>
        <item>Tilføj Blok</item>
    </string-array>

</resources>
