<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordSkemaFragment"
    tools:context=".SkemaFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ugenavnTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UGE"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/dagnavn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/mandag"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/dagnavn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/tirsdag"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/dagnavn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/onsdag"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/dagnavn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/torsdag"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/dagnavn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/fredag"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <GridView
            android:id="@+id/skemaGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:numColumns="5"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="50dp"


            android:stretchMode="columnWidth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>